crates/formatter/tests/snapshots/snapshots__migrations__000319_chat.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists chat_messages;

drop table if exists chats;
