crates/formatter/tests/snapshots/snapshots__migrations__000320_terraform_cached_modules.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_terraform_values add column cached_module_files uuid references files (
	id
);
