crates/formatter/tests/snapshots/snapshots__migrations__000321_add_parent_id_to_workspace_agents.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents add column parent_id uuid references workspace_agents (
	id
) on delete cascade;
