crates/formatter/tests/snapshots/snapshots__migrations__000322_rename_test_notification.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update notification_templates
set name = 'Troubleshooting Notification'
where id = 'c425f63e-716a-4bf4-ae24-78348f706c3f';
