crates/formatter/tests/snapshots/snapshots__migrations__000323_workspace_latest_builds_optimization.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Drop the dependent views
drop view workspace_prebuilds;
-- Previously created in 000314_prebuilds.up.sql
drop view workspace_latest_builds;

-- The previous version of this view had two sequential scans on two very large
-- tables. This version optimized it by using index scans (via a lateral join)
-- AND avoiding selecting builds from deleted workspaces.
create view workspace_latest_builds as
select
	latest_build.id,
	latest_build.workspace_id,
	latest_build.template_version_id,
	latest_build.job_id,
	latest_build.template_version_preset_id,
	latest_build.transition,
	latest_build.created_at,
	latest_build.job_status
from workspaces
	left join LATERAL (
		select
			workspace_builds.id as id,
			workspace_builds.workspace_id as workspace_id,
			workspace_builds.template_version_id as template_version_id,
			workspace_builds.job_id as job_id,
			workspace_builds.template_version_preset_id as template_version_preset_id,
			workspace_builds.transition as transition,
			workspace_builds.created_at as created_at,
			provisioner_jobs.job_status as job_status
		from workspace_builds
			join provisioner_jobs on provisioner_jobs.id = workspace_builds.job_id
		where workspace_builds.workspace_id = workspaces.id
		order by build_number desc
		limit 1
	) latest_build on true
where workspaces.deleted = false
order by workspaces.id asc;

-- Recreate the dependent views
create view workspace_prebuilds as
with
	all_prebuilds as (
		select w.id, w.name, w.template_id, w.created_at
		from workspaces w
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	),
	workspaces_with_latest_presets as (
		select distinct on (workspace_builds.workspace_id)
			workspace_builds.workspace_id, workspace_builds.template_version_preset_id
		from workspace_builds
		where (workspace_builds.template_version_preset_id is not null)
		order by workspace_builds.workspace_id, workspace_builds.build_number desc
	),
	workspaces_with_agents_status as (
		select
			w.id as workspace_id,
			bool_and(
				(wa.lifecycle_state = 'ready'::workspace_agent_lifecycle_state)
			) as ready
		from (
			(
				(
					workspaces w
						join workspace_latest_builds wlb on ((wlb.workspace_id = w.id))
				)
					join workspace_resources wr on ((wr.job_id = wlb.job_id))
			)
				join workspace_agents wa on ((wa.resource_id = wr.id))
		)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
		group by w.id
	),
	current_presets as (
		select w.id as prebuild_id, wlp.template_version_preset_id
		from (
			workspaces w
				join workspaces_with_latest_presets wlp on ((wlp.workspace_id = w.id))
		)
		where (w.owner_id = 'c42fdf75-3097-471c-8c33-fb52454d81c0'::uuid)
	)
select
	p.id,
	p.name,
	p.template_id,
	p.created_at,
	COALESCE(a.ready, false) as ready,
	cp.template_version_preset_id as current_preset_id
from (
	(
		all_prebuilds p
			left join workspaces_with_agents_status a on ((a.workspace_id = p.id))
	)
		join current_presets cp on ((cp.prebuild_id = p.id))
);
